[package]
name = "vulkan-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
cgmath = "0.18.0"
log = "0.4.22"
png = "0.17.13"
pretty_env_logger = "0.5.0"
thiserror = "1.0.63"
tobj = { version = "4.0.2", features = ["log"] }
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }
winit = "0.30.5"
